# env

./: .gitignore  README.md
frontend/: .gitignore  README.md  package-lock.json  package.json
frontend/scripts/: check.js  setup.sh
frontend/src/components/: Button.css  Button.tsx
java/: .gitignore  README.md  pom.xml
java/scripts/: build.sh  setup.sh
java/src/main/java/com/example/: App.java
java/src/main/java/com/tool/: App.java
java/src/main/java/com/tool/checkers/: TestDirectoryChecker.java
java/src/test/java/com/example/: AppTest.java
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  pythonEnvManagement.md  systemPatterns.md  techContext.md
python/: .env.example  .gitignore  Dockerfile  README.md  check_and_migrate.py  docker-compose.yml  pyproject.toml
python/scripts/: check_python_env.py  migrate_to_poetry.py  setup.sh
~/: .zshrc
